      calibration constants were being used on a U6-Pro by mistake when
      calculating the voltage value.
    - Replaced print statements with print function calls in the modules for
      Python 3 compatibility.
    - Updated LabJackException for Windows Python 3 compatibility.
    - Updated U6 and UE9 i2c methods for Python 3 compatibility.
    - Updated LJTick-DAC.py to use calibrated analog input readings and use the
      same getAIN call to read analog inputs.
    - Removed DCA-10 example as the product is discontinued.
    - Updated u3allio.py to use calibration analog input readings.
    - Added argument check to u3allio.py and u6allio.py.
    - Updated Modbus methods in LabJackPython module for Python 3
      compatibility.
    - Updated Windows UD device open for Python 3 compatibility.
    - Added timeout (in ms) functionality to the U12 read method.
    - Fixed the U12 rawPulseout method so that it waits for the device response.
    - Changed struct pack and unpack function usage in modules. They are now
      imported and used directly.
    - Removed SkyMote support, which includes skymote.py. The SkyMote products
      did not make a release.
    - Updated some checks in modules to use boolean instead of string
      comparisons to improve performance a little.
    - Updated _makeDeviceFromHandle function for the UE9 to get more
      information.
    - Updated setup.py to remove Python 2.5 support and add Python 3+ support.
    - Updated setup.py to use setuptools when available.
    - Added a full path Mac OS X Exodriver load attempt if normal load fails.
    - Fixed the GetDriverVersion function.
    - Renamed the Unix only outputSinDAC example to outputSinDacUnix.
    - Added cross-platform outputSinDac example.
    - Fixed the U12 asynch method.
    - Fixed the BaudFactor calculation in the UE9 asynchConfig method.
    - Updated U6 asynchConfig method so it returns a dict. with response info.